test/corpus/complex_string_test.txt
===================
Complex String Test
===================

message1 := 'Single quotes with escape: \' ';
message2 := "Double quotes with escape: \" ";
combined := 'First part' + "Second part";

---

(source_file
  (statement
    (assignment_statement
      (variable_access
        (variable_base
          (identifier)))
      (expression
        (literal
          (string_literal)))))
  (statement
    (assignment_statement
      (variable_access
        (variable_base
          (identifier)))
      (expression
        (literal
          (string_literal)))))
  (statement
    (assignment_statement
      (variable_access
        (variable_base
          (identifier)))
      (expression
        (binary_expression
          (expression
            (literal
              (string_literal)))
          (expression
            (literal
              (string_literal))))))))
