test/corpus/quote_test.txt
===================
Quote Test
===================

message1 := 'Single quotes';
message2 := "Double quotes";

---

(source_file
  (statement
    (assignment_statement
      (variable_access
        (variable_base
          (identifier)))
      (expression
        (literal
          (string_literal)))))
  (statement
    (assignment_statement
      (variable_access
        (variable_base
          (identifier)))
      (expression
        (literal
          (string_literal))))))
